server changes seed issue

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "seed-basic": "node scripts/seedBasic.js",
     "setup-production": "node scripts/setupProduction.js",
     "debug-login": "node scripts/debugLogin.js",
+    "fix-admin-password": "node scripts/fixAdminPassword.js",
     "seed-products": "node scripts/seedCosmeticProducts.js",
     "seed-banners": "node scripts/seedComprehensiveBanners.js",
     "create-admin": "node scripts/createAdmin.js"
