--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "frontend": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
-    "install-all": "npm install && cd backend && npm install"
+    "install-all": "npm install && cd backend && npm install",
+    "production": "chmod +x start-production.sh && ./start-production.sh"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
